update logic payment mongo

--- a/src/main/resources/views/layouts/header.html
+++ b/src/main/resources/views/layouts/header.html
@@ -452,6 +452,8 @@
   <!-- Modal JavaScript -->
   <script defer src="/js/main-modal.js"></script>
   <script defer src="/js/header-menu.js"></script>
+  <script defer src="/js/client/cart/cart-api.js"></script>
+  <script defer src="/js/client/order/order-api.js"></script>
   <script defer src="/js/client/cart/cart-count.js"></script>
   <script defer src="/js/client/cart/wishlist-count.js"></script>
   <script defer src="/js/client/cart/cart-wishlist-manager.js"></script>
