--- a/src/main/resources/views/layouts/header.html
+++ b/src/main/resources/views/layouts/header.html
@@ -41,10 +41,10 @@
           <button id="userIcon" class="text-gray-600 hover:text-green-600 transition-colors">
             <i class="fas fa-user text-xl"></i>
           </button>
-          <a href="/products/wishlist" class="text-gray-600 hover:text-green-600 transition-colors relative">
+          <!-- <a href="/products/wishlist" class="text-gray-600 hover:text-green-600 transition-colors relative">
             <i class="fas fa-heart text-xl"></i>
             <span class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">0</span>
-          </a>
+          </a> -->
           <a href="/cart" class="text-gray-600 hover:text-green-600 transition-colors relative">
             <i class="fas fa-shopping-cart text-xl"></i>
             <span class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">0</span>
